# uselect

./: LICENSE  README.md  pyproject.toml
docs/: _config.yml  _toc.yml  index.md  questions.md
docs/questions/: midterms.md
