[tool.poetry]
name = "uselect"
version = "0.1.0"
description = "Tools for analyzing data from US elections"
authors = ["fillthesavage <43685932+fillthesavage@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
pandas = "^1.4.2"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
pytest = "^7.1.2"
jupyter-book = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
